[gd_scene load_steps=16 format=2]

[ext_resource path="res://maps/Map2.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/ui/ArkanaLook.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/CascadiaCode.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/textures/ui/BTN OK.png" type="Texture" id=4]
[ext_resource path="res://scenes/CrearPJScene.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/ui/class_icons/bandido.jpg" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 491, 21, 21 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 81, 354, 16, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 82, 383, 15, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 82, 369, 15, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 73, 81, 130, 130 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 50, 491, 21, 21 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="CrearPJScene" type="Node"]
script = ExtResource( 5 )

[node name="Map" parent="." instance=ExtResource( 1 )]
position = Vector2( -184, -2132 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="LeftPanel" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 198.0
margin_top = -242.0
margin_right = 537.0
margin_bottom = 251.0
color = Color( 0.443137, 0.32549, 0.160784, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ClassIcon" type="TextureRect" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.5
margin_top = -221.5
margin_right = 82.5
margin_bottom = -11.5
texture = ExtResource( 6 )

[node name="Borde" type="NinePatchRect" parent="UI/LeftPanel/ClassIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
__meta__ = {
"_edit_lock_": true
}

[node name="UserClassLabel" type="Label" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -11.5
margin_right = 57.5
margin_bottom = 15.5
custom_fonts/font = SubResource( 9 )
text = "Clase"
align = 1
valign = 1
clip_text = true

[node name="UserClass" type="HBoxContainer" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = 15.5
margin_right = 110.5
margin_bottom = 66.5
__meta__ = {
"_edit_group_": true
}

[node name="BtnLeft" type="TextureButton" parent="UI/LeftPanel/UserClass"]
margin_right = 40.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true

[node name="Info" type="TextureRect" parent="UI/LeftPanel/UserClass"]
margin_left = 44.0
margin_right = 181.0
margin_bottom = 51.0
size_flags_horizontal = 3
texture = SubResource( 3 )
expand = true

[node name="Text" type="Label" parent="UI/LeftPanel/UserClass/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Asesino"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="NinePatchRect" parent="UI/LeftPanel/UserClass/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_lock_": true
}

[node name="BtnRight" type="TextureButton" parent="UI/LeftPanel/UserClass"]
margin_left = 185.0
margin_right = 225.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true
flip_h = true

[node name="UserRaceLabel" type="Label" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = 66.5
margin_right = 56.5
margin_bottom = 93.5
custom_fonts/font = SubResource( 9 )
text = "Raza"
align = 1
valign = 1
clip_text = true

[node name="UserRace" type="HBoxContainer" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = 93.5
margin_right = 110.5
margin_bottom = 144.5
__meta__ = {
"_edit_group_": true
}

[node name="BtnLeft" type="TextureButton" parent="UI/LeftPanel/UserRace"]
margin_right = 40.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true

[node name="Info" type="TextureRect" parent="UI/LeftPanel/UserRace"]
margin_left = 44.0
margin_right = 181.0
margin_bottom = 51.0
size_flags_horizontal = 3
texture = SubResource( 3 )
expand = true

[node name="Text" type="Label" parent="UI/LeftPanel/UserRace/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Humano"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="NinePatchRect" parent="UI/LeftPanel/UserRace/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_lock_": true
}

[node name="BtnRight" type="TextureButton" parent="UI/LeftPanel/UserRace"]
margin_left = 185.0
margin_right = 225.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true
flip_h = true

[node name="UserGenderLabel" type="Label" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = 144.5
margin_right = 57.5
margin_bottom = 171.5
custom_fonts/font = SubResource( 9 )
text = "Genero"
align = 1
valign = 1
clip_text = true

[node name="UserGender" type="HBoxContainer" parent="UI/LeftPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = 171.5
margin_right = 110.5
margin_bottom = 222.5
__meta__ = {
"_edit_group_": true
}

[node name="BtnLeft" type="TextureButton" parent="UI/LeftPanel/UserGender"]
margin_right = 40.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true

[node name="Info" type="TextureRect" parent="UI/LeftPanel/UserGender"]
margin_left = 44.0
margin_right = 181.0
margin_bottom = 51.0
size_flags_horizontal = 3
texture = SubResource( 3 )
expand = true

[node name="Text" type="Label" parent="UI/LeftPanel/UserGender/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Hombre"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="NinePatchRect" parent="UI/LeftPanel/UserGender/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_lock_": true
}

[node name="BtnRight" type="TextureButton" parent="UI/LeftPanel/UserGender"]
margin_left = 185.0
margin_right = 225.0
margin_bottom = 51.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 7 )
expand = true
flip_h = true

[node name="Borde" type="NinePatchRect" parent="UI/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
__meta__ = {
"_edit_lock_": true
}

[node name="RightPanel" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -122.0
margin_right = -310.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -210, 142 )
color = Color( 0.443137, 0.32549, 0.160784, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="UserEmailLabel" type="Label" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 36.5
margin_right = 61.0
margin_bottom = 63.5
custom_fonts/font = SubResource( 9 )
text = "Email:"
align = 1
valign = 1
clip_text = true

[node name="UserEmail" type="LineEdit" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = 63.5
margin_right = 76.0
margin_bottom = 87.5
align = 1

[node name="UserNameLabel" type="Label" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -117.5
margin_right = 61.0
margin_bottom = -90.5
custom_fonts/font = SubResource( 9 )
text = "Nombre:"
align = 1
valign = 1
clip_text = true

[node name="UserName" type="LineEdit" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -89.5
margin_right = 78.0
margin_bottom = -65.5
align = 1

[node name="UserPasswordLabel" type="Label" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -65.5
margin_right = 61.0
margin_bottom = -38.5
rect_pivot_offset = Vector2( -21, 47 )
custom_fonts/font = SubResource( 9 )
text = "Contraseña:"
align = 1
valign = 1
clip_text = true

[node name="UserPassword0" type="LineEdit" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -38.5
margin_right = 78.0
margin_bottom = -14.5
rect_pivot_offset = Vector2( 0, 15 )
align = 1
secret = true

[node name="UserPasswordLabel2" type="Label" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -14.5
margin_right = 100.0
margin_bottom = 12.5
rect_pivot_offset = Vector2( -21, 47 )
custom_fonts/font = SubResource( 9 )
text = "Confirmar Contraseña:"
align = 1
valign = 1
clip_text = true

[node name="UserPassword1" type="LineEdit" parent="UI/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = 12.5
margin_right = 78.0
margin_bottom = 36.5
rect_pivot_offset = Vector2( 0, 15 )
align = 1
secret = true

[node name="Borde" type="NinePatchRect" parent="UI/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCancel" type="TextureButton" parent="UI"]
margin_left = 24.0
margin_top = 640.0
margin_right = 226.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/BtnCancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Volver"
align = 1
valign = 1

[node name="BtnOK" type="TextureButton" parent="UI"]
margin_left = 1048.0
margin_top = 640.0
margin_right = 1250.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/BtnOK"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Crear"
align = 1
valign = 1

[connection signal="pressed" from="UI/LeftPanel/UserClass/BtnLeft" to="." method="on_selected_class" binds= [ -1 ]]
[connection signal="pressed" from="UI/LeftPanel/UserClass/BtnRight" to="." method="on_selected_class" binds= [ 1 ]]
[connection signal="pressed" from="UI/LeftPanel/UserRace/BtnLeft" to="." method="on_selected_race" binds= [ -1 ]]
[connection signal="pressed" from="UI/LeftPanel/UserRace/BtnRight" to="." method="on_selected_race" binds= [ 1 ]]
[connection signal="pressed" from="UI/LeftPanel/UserGender/BtnLeft" to="." method="on_selected_gender" binds= [ -1 ]]
[connection signal="pressed" from="UI/LeftPanel/UserGender/BtnRight" to="." method="on_selected_gender" binds= [ 1 ]]
[connection signal="pressed" from="UI/BtnCancel" to="." method="_on_BtnCancel_pressed"]
[connection signal="pressed" from="UI/BtnOK" to="." method="_on_BtnOK_pressed"]
